Changelog
=========


(unreleased)
------------
- Updated plotting patches. [lgblkb]
- Updated plotting patches. [lgblkb]
- Added tests and fixed dependencies. [lgblkb]
- Added tests and fixed dependencies. [lgblkb]
- Fixed bug with get_name not defined and Path object not found. Spasibo
  Nurbeku. [lgblkb]
- Fixed circular import bug. [lgblkb]
- Integrated navigation tools to lgblkb_tools. [lgblkb]
- Integrated navigation tools to lgblkb_tools. [lgblkb]
- Integrated navigation tools to lgblkb_tools. [lgblkb]
- Integrated navigation tools to lgblkb_tools. [lgblkb]
- Added GdalMan. [lgblkb]
- Debug run_cmd. [lgblkb]
- Added mkdtemp to Folder. [lgblkb]
- Added mkdtemp to Folder. [lgblkb]
- Changed info property of DataSet to become a method with kwargs.
  Removed GdalMan, since it's too early yet. [lgblkb]
- Addded assert_exists to Folder. [lgblkb]
- Addded assert_exists to Folder. [lgblkb]
- Added local dev tools. [lgblkb]
- Updated DataSet. [lgblkb]
- Update versioning. [lgblkb]
- Update ChangeLog. [lgblkb]
- Fix versioning. [lgblkb]
- Update requirements.txt. [lgblkb]
- Added get_dist_info. [lgblkb]
- Update requirements. [lgblkb]
- Updated Plotter. [lgblkb]
- Fix issue. [lgblkb]
- Removed dev_script.py. Added taskipy. [lgblkb]
- Updated Plotter to plot both images and line plots. [lgblkb]
- Updated Plotter to plot both images and line plots. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.14 → 1.1.15. [lgblkb]
- Cleanup and optimize imports. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.13 → 1.1.14. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Added Plotter to lgblkb_tools. [lgblkb]
- Added GdalMan to lgblkb_tools. [lgblkb]
- Fix format warnings. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.12 → 1.1.13. [lgblkb]
- Updated requirements.txt. [lgblkb]
- Added r() and nr() to Folder to quickly switch between reactive and
  non-reactive behavior. [lgblkb]
- Updated ChangeLog. [lgblkb]
- Bump version: 1.1.11 → 1.1.12. [lgblkb]